deployment-game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snake-game
  namespace: snake-game
  labels:
    app: snake-game
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: snake-game
  template:
    metadata:
      labels:
        app: snake-game
    spec:
      containers:
      - name: snake-game
        image: docker.io/lavalex/snake-game:352d76a6f96745c3fd2731c0a88080948c1fe0e8
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
