svc-game.yaml
apiVersion: v1
kind: Service
metadata:
  name: snake-game
  namespace: snake-game
  labels:
    app: snake-game
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: snake-game
